--- a/src/assets/scss/boldgrid/blog/design/_base.scss
+++ b/src/assets/scss/boldgrid/blog/design/_base.scss
@@ -70,7 +70,7 @@ main {
 		.entry-content {
 			display: flex;
 			flex-wrap: wrap;
-			flex-direction: row;
+			flex-direction: column;
 			width: 100%;
 			flex: 1 0 auto;
 			padding-left: 15px;
